# Python_modules

day_00/: code_blocks.md
day_00/ex00/: requirements.txt
day_00/ex01/: exec.py
day_00/ex04/: operations.py
day_00/ex05/: kata01.py  kata02.py  kata03.py  kata04.py
day_00/ex08/: sos.py
day_01/ex00/: book.py  recipe.py  test.py
day_01/ex01/: game.py
day_01/ex02/: test.py  vector.py
day_01/ex03/: generator.py
day_01/ex04/: eval.py
day_01/ex05/: the_bank.py
day_02/: TinyStatistician.py
day_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
day_02/ex01/: main.py
day_02/ex02/: logger.py
day_02/ex03/: bad.csv  csvreader.py  main.py
day_02/ex04/: README.md  build.sh  pyproject.toml  test.py
day_02/ex04/src/my_minipack_package_grvelva/: loading.py
day_02/ex04/tests/: test.py
day_03/: main.py
day_03/ex00/: NumPyCreator.py
day_03/ex01/: ImageProcessor.py
day_03/ex02/: ScrapBooker.py
day_03/ex03/: ColorFilter.py
day_03/ex04/: Kmeans.py
day_04/data/: ssc_short.csv
day_04/ex00/: FileLoader.py
day_04/ex01/: FileLoader.py  YoungestFellah.py
day_04/ex02/: ProportionBySport.py
day_04/ex03/: HowManyMedals.py
day_04/ex04/: SpatioTemporalData.py
day_04/ex05/: HowManyMedalsByCountry.py
day_04/ex06/: MyPlotLib.py
day_04/ex07/: Komparator.py
day_04/ex_00/: FileLoader.py
day_05/: prediction.py
ex00/: answers.txt
ex01/: exec.py
ex02/: whois.py
ex03/: count.py
ex04/: operations.py
ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
ex06/: recipe.py
ex07/: filterwords.py
ex09/: guess.py
ex10/: loading.py
(+74 files in other folders)
